added new and create feature for showcase

--- a/Portfolio/app/views/showcases/index.html.erb
+++ b/Portfolio/app/views/showcases/index.html.erb
@@ -5,6 +5,6 @@
     <p><%= showcase_item.title %></p>
     <p><%= showcase_item.subtitle %></p>
     <p><%= showcase_item.body %></p>
-    <%= image_tag showcase_item.thumb_image %>
+    <%= image_tag showcase_item.thumb_image unless showcase_item.thumb_image.nil? %>
     
 <% end %>
