implemented show functionality for showcase module

--- a/Portfolio/app/views/showcases/index.html.erb
+++ b/Portfolio/app/views/showcases/index.html.erb
@@ -4,7 +4,7 @@
 
 <% @showcase_items.each do |showcase_item| %>
 
-    <p><%= showcase_item.title %></p>
+    <p><%= link_to showcase_item.title, showcase_path(showcase_item.id) %></p>
     <p><%= showcase_item.subtitle %></p>
     <p><%= showcase_item.body %></p>
     <%= image_tag showcase_item.thumb_image unless showcase_item.thumb_image.nil? %>
